# fizzbuzz_rs

./: Cargo.toml  Dockerfile  Makefile  README.md  config.toml
src/: config.rs  errors.rs  main.rs
src/handlers/: mod.rs
src/handlers/reqlimit/: config.rs  mod.rs
src/handlers/v1/: echo.rs  errors.rs  mod.rs
src/handlers/v1/model/: errors.rs  mod.rs
with_trillium/: Cargo.toml
with_trillium/src/: config.rs  main.rs
with_trillium/src/handlers/reqlimit/: config.rs  mod.rs
with_trillium/src/handlers/v1/: mod.rs
with_trillium/src/handlers/v1/model/: mod.rs
