[package]
name = "fizzbuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
log = "0.4"
async-std = "1.12"
signal-hook-async-std = "0.2"
signal-hook = "0.3"
trillium = "0.2"
trillium-async-std = "0.3"
trillium-logger = "0.4"
trillium-conn-id = "0.2"
trillium-router = "0.3"
trillium-rustls = "0.4"
trillium-tls-common = "0.1"
serde_qs = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
lru = "0.10"
ratelimit = "0.5"
clap = "2.34"
