[package]
name = "fizzbuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
async-std = "1.12.0"
signal-hook-async-std = "0.2.2"
signal-hook = "0.3.15"
trillium-async-std = "0.2.0"
trillium = "0.2.3"
trillium-logger = "0.4.0"
trillium-conn-id = "0.2.1"
trillium-router = "0.3.3"
serde_qs = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
